labs/trainer/ctr-infra/src/main/k8s/gitea/gitea.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: infra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  namespace: infra
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.8.3
        ports:
        - containerPort: 3000
          name: gitea-http
        volumeMounts:
        - mountPath: /data
          name: git-data
        - mountPath: /data/gitea/conf
          name: config
      volumes:
      - name: git-data
        persistentVolumeClaim:
          claimName: gitea-pvc
      - name: config
        configMap:
          name: gitea-config
---
kind: Service
apiVersion: v1
metadata:
  name: gitea-service
  namespace: infra
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000
    targetPort: gitea-http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: infra
spec:
  rules:
  - host: gitea.localtest.me
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-service
          servicePort: gitea-http
